# agentflow

./: .dockerignore  .env.example  .env.full-stack.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  catalog-backup.json  claude.md  conftest.py  docker-compose.full-stack.yml  docker-compose.hdfs.yml  docker-compose.mirror.yml  docker-compose.network-phase4.yml  docker-compose.postgis.yml  docker-compose.yml  pyproject.toml
.claude/: mcp_servers.json
afl/: __init__.py  ast.py  ast_utils.py  cli.py  config.py  emitter.py  loader.py  logging.py  parser.py  preprocess.py  publisher.py  resolver.py  source.py  transformer.py  validator.py
agent-spec/: README.md  cache-layout.agent-spec.yaml  facetwork.agent-spec.yaml  manifest-schema.agent-spec.yaml  storage.agent-spec.yaml  tools-pattern.agent-spec.yaml
config-examples/: afl.config.json
docker/: Dockerfile.agent  Dockerfile.aws-lambda  Dockerfile.dashboard  Dockerfile.example-runner  Dockerfile.mcp  Dockerfile.noaa-weather  Dockerfile.osm-geocoder  Dockerfile.osm-geocoder-lite  Dockerfile.runner  Dockerfile.seed  README.md  entrypoint-example-runner.sh  entrypoint-runner.sh
docs/: PROJECT_JOURNEY.md  architecture.md  deployment.md  tutorial.md
example-template/: README.md  pyproject.toml
example-template/src/example_template/: __init__.py
example-template/src/example_template/ffl/: greeter.ffl
example-template/src/example_template/handlers/: __init__.py  greeter_handlers.py
examples/: README.md
facetwork/: __init__.py  ast.py  emitter.py  logging.py  parser.py  preprocess.py  transformer.py  validator.py
scripts/: _env.sh  _remote.sh  build-cache-index.py  build-thesis-pdf  catalog  clone_handlers.sh  compile  dashboard  db-stats  drop-collections  easy-local.sh  easy.sh  ffl-run  full-stack  install  install-anthropic  install-example  list-runners  mcp-server  osm-prefetch  publish  reallyeasy.sh  rebuild  rolling-deploy  run-workflow  runner  scaffold-handler  seed-examples  serve-tiled-map  server  setup  start-runner  start_mongo  stop-runners  teardown  terminate-workflow
spec/: 00_overview.md  10_language.md  11_semantics.md  12_validation.md  20_compiler.md  30_runtime.md  40_database.md  50_event_system.md  60_agent_sdk.md  61_llm_agent_integration.md  70_examples.md  80_acceptance_tests.md  90_nonfunctional.md  95_self_assessment.md  99_changelog.md  README.md
tests/: __init__.py  hdfs_helpers.py  test_ast_utils.py  test_aws_lambda_compilation.py  test_capabilities.py  test_catalog_match.py  test_cli.py  test_config.py  test_emitter.py  test_entry_points.py  test_examples_discovery.py  test_handler_dispatch_aws_lambda.py  test_handler_dispatch_genomics.py  test_handler_dispatch_jenkins.py  test_handler_dispatch_maven.py  test_handler_dispatch_osm.py  test_jenkins_compilation.py  test_lifecycle_integration.py  test_loader.py  test_logging.py  test_maven_compilation.py  test_maven_runner.py  test_osm_composed_workflows.py  test_osm_handlers_hdfs.py  test_osm_validation.py  test_osm_zoom_validation.py  test_parser.py  test_postgis_import.py  test_preprocess.py  test_publisher.py  (+4 more)
(+1114 files in other folders)
