[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentflow"
version = "0.5.1"
description = "AFL (Agent Flow Language) compiler and runtime"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "lark>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "types-requests>=2.31.0",
]
mongodb = [
    "pymongo>=4.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mongomock>=4.0",
]
dashboard = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "jinja2>=3.1",
]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
afl = "afl.cli:main"
afl-dashboard = "afl.dashboard.__main__:main"
afl-runner = "afl.runtime.runner.__main__:main"
afl-mcp = "afl.mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["afl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
log_file = "afl-test.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s %(levelname)s [%(name)s] %(message)s"
log_file_date_format = "%Y-%m-%dT%H:%M:%S"

[tool.coverage.run]
source = ["afl"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top of file (logger setup pattern)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict= (python 3.10+)
]

[tool.ruff.lint.isort]
known-first-party = ["afl"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true
# Gradually tighten these settings as type coverage improves:
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# warn_return_any = true
# strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "examples.*"
ignore_errors = true
